[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/intro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/story/Credits.gd" type="Script" id=2]
[ext_resource path="res://assets/bgm/credits.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.0392157, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroText" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IntroText"]
margin_top = 172.0
margin_right = 724.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 1 )
text = "Congratulations!
You have found a way out of the virtual construct.
System shutdown commencing. . . . . ."

[node name="TitleScreen" type="VBoxContainer" parent="."]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 930.0
margin_bottom = 543.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressStart" type="Label" parent="TitleScreen"]
visible = false
margin_right = 830.0
margin_bottom = 457.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Thank you for playing our LUDUM DARE 47 submission.

Developed by:

Hobie de Rue
Janou Christophe
Laurens de Vos
Ruud Cremers
Theo Cremers

BGM (3rd party, category opt-out):
Driving to the Future
Ascent to the Station
Race Between the Spires
Glorious Movie Ending
All done by TehknoAXE

Press Jump to quit

"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0

[node name="Tween" type="Tween" parent="."]

[node name="FadeToBlack" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.0392157, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
